# almdina-erp

./: README.md  pyproject.toml
.github/workflows/: frappe-v16-integration.yml  static-check.yml  static-checks.yml
almdina_erp/: hooks.py  install.py  modules.txt  patches.txt
almdina_erp/almdina_erp/: __init__.py  api.py
almdina_erp/almdina_erp/custom/: almdina_erp_settings.json  door_cutting_order.json
almdina_erp/almdina_erp/doctype/: __init__.py
almdina_erp/almdina_erp/services/: __init__.py  actual_consumption_reversal.py  actual_consumption_service.py  advanced_cutting_optimizer.py  approval_queue_service.py  archive_service.py  cost_service.py  cutting_engine.py  cutting_plan_service.py  export_validation_service.py  order_cancellation.py  order_creation_service.py  order_defaults_service.py  order_lifecycle_service.py  performance_service.py  preflight_service.py  remnant_service.py  (+11 more)
almdina_erp/tests/: test_actual_consumption.py  test_advanced_cutting_optimizer.py  test_approval_safety.py  test_arabic_operator_localization.py  test_cutting_engine.py  test_cutting_plan_workspace_ux.py  test_door_cutting_order_operator_ux.py  test_dxf_autocad_compatibility.py  test_export_validation.py  test_order_before_insert_defaults.py  test_order_cost_invoice_ux.py  test_order_creation_defaults.py  test_permissions.py  test_replacement_planning.py  test_report_sql.py  test_schema_install.py  test_waste_reconciliation.py
almdina_erp/translations/: ar.csv
docs/: CUTTING_OPTIMIZER_V2.md  IMPLEMENTATION_MATRIX_v1.0.md  REQUIREMENTS_v1.0.md  SETUP_v1.0.md  UAT_v1.0.md
(+99 files in other folders)
