[project]
name = "almdina_erp"
authors = [
    { name = "Horizon Tech" }
]
description = "ERPNext/Frappe application for MDF cutting, optimization, production and inventory management"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"
